sort.basic.selection.AlgSelectionSort.scala.error
Compilation error:
AlgSelectionSort:13: error: ':' expected but ')' found.
def rangMini(debut){
                  ^AlgSelectionSort:23: error: identifier expected but '}' found.
}
^